--- a/index.html
+++ b/index.html
@@ -3,18 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>UrbanPaintPro | 100% Working</title>
+    <title>UrbanPaintPro | Final Master</title>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root { --p: #673ab7; --bg: #ffffff; --grey: #f5f5f7; --success: #00c853; }
-        body { font-family: 'Segoe UI', sans-serif; margin: 0; background: var(--bg); padding-bottom: 80px; }
+        body { font-family: 'Inter', sans-serif; margin: 0; background: var(--bg); padding-bottom: 80px; }
         .header { padding: 15px 20px; border-bottom: 1px solid #eee; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; background: white; z-index: 1000; }
-        .logo { font-weight: 900; font-size: 1.3rem; }
+        .logo { font-weight: 900; font-size: 1.2rem; }
+        #auth-status { font-size: 10px; font-weight: 800; color: var(--p); border: 1.5px solid var(--p); padding: 4px 10px; border-radius: 8px; cursor: pointer; }
+
+        /* Sections */
         .section { display: none; padding: 20px; }
         .section.active { display: block; }
-        .calc-card { background: var(--grey); border-radius: 20px; padding: 20px; text-align: center; border: 1px solid #eee; margin-bottom: 20px; }
-        select { width: 100%; padding: 12px; margin-bottom: 10px; border-radius: 10px; border: 1px solid #ddd; font-weight: 700; background: white; }
-        .price-big { font-size: 2.2rem; color: var(--p); font-weight: 900; margin: 5px 0; }
+
+        /* Auth Modal */
+        #auth-modal { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); z-index: 9999; display: none; align-items: center; justify-content: center; backdrop-filter: blur(4px); }
+        .auth-card { background: white; width: 85%; padding: 30px; border-radius: 24px; text-align: center; }
+        .auth-card input { width: 100%; padding: 12px; margin: 10px 0; border-radius: 12px; border: 1px solid #ddd; outline: none; }
+
+        /* Products UI */
+        .tabs { display: flex; overflow-x: auto; gap: 10px; padding-bottom: 15px; scrollbar-width: none; }
+        .tab { padding: 8px 16px; border-radius: 50px; background: var(--grey); font-size: 0.8rem; font-weight: 700; white-space: nowrap; cursor: pointer; border: 1px solid #eee; }
+        .tab.active { background: var(--p); color: white; }
+        .p-card { border: 1px solid #eee; border-radius: 16px; padding: 15px; margin-bottom: 12px; display: flex; justify-content: space-between; align-items: center; }
+        .price { color: var(--p); font-weight: 800; }
+
+        /* Nav */
         .bottom-nav { position: fixed; bottom: 0; width: 100%; background: white; display: flex; border-top: 1px solid #eee; padding: 12px 0; z-index: 2000; }
         .nav-item { flex: 1; text-align: center; font-size: 10px; color: #757575; font-weight: 600; cursor: pointer; }
         .nav-item.active { color: var(--p); }
@@ -25,21 +41,31 @@
 
 <div class="header">
     <div class="logo">Urban<span style="color:var(--p)">PaintPro</span></div>
-    <div style="font-size: 10px; border: 1px solid #ddd; padding: 4px 10px; border-radius: 8px;">NON-GST</div>
+    <div id="auth-status" onclick="openAuth()">● LOGIN / SIGNUP</div>
 </div>
 
-<div id="home" class="section active">
-    <div class="calc-card">
-        <h4>Smart Estimator (No GST)</h4>
-        <select id="bhk" onchange="updateCalc()"><option value="450">1 BHK</option><option value="950">2 BHK</option><option value="1500">3 BHK</option></select>
-        <select id="paint" onchange="updateCalc()"><option value="65">Royale Aspira</option><option value="42">Royale Luxury</option><option value="18">Tractor Emulsion</option></select>
-        <div class="price-big" id="total-val">₹ 8,100</div>
-        <button onclick="bookOrder()" style="width:100%; padding:14px; background:var(--p); color:white; border:none; border-radius:12px; font-weight:bold;">Confirm & Book Now</button>
+<div id="auth-modal">
+    <div class="auth-card">
+        <h3 id="auth-title">Welcome</h3>
+        <input type="email" id="email" placeholder="Email Address">
+        <input type="password" id="pass" placeholder="Password">
+        <button onclick="handleAuth()" style="width:100%; padding:14px; background:var(--p); color:white; border:none; border-radius:12px; font-weight:bold;">Continue</button>
+        <p style="font-size: 0.7rem; color: #888; margin-top: 15px;" onclick="closeAuth()">Cancel</p>
     </div>
 </div>
 
+<div id="home" class="section active">
+    <div class="tabs">
+        <div class="tab active" onclick="render('Interior', this)">Interior</div>
+        <div class="tab" onclick="render('Exterior', this)">Exterior</div>
+        <div class="tab" onclick="render('Waterproofing', this)">Waterproofing</div>
+        <div class="tab" onclick="render('Polish', this)">Polish</div>
+    </div>
+    <div id="product-list"></div>
+</div>
+
 <div id="orders" class="section">
-    <h3>Active Tracking</h3>
+    <h3>Project Tracking</h3>
     <div id="status-box" style="border-left: 5px solid #ddd; background: #fafafa; padding: 15px; border-radius: 12px;">
         <p id="track-msg">Abhi koi active order nahi hai.</p>
     </div>
@@ -70,23 +96,38 @@
 </div>
 
 <script>
-    function updateCalc() {
-        let res = document.getElementById('bhk').value * document.getElementById('paint').value;
-        document.getElementById('total-val').innerText = "₹ " + res.toLocaleString('en-IN');
+    // Firebase Config Replace karein
+    const firebaseConfig = { apiKey: "AIzaSy...", ... };
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+
+    const paints = {
+        'Interior': [{n:"Royale Aspira", p:65, b:"LUXURY"}, {n:"Royale Luxury", p:42, b:"POPULAR"}, {n:"Tractor Emulsion", p:18, b:"BUDGET"}],
+        'Exterior': [{n:"Apex Ultima Protek", p:75, b:"TOP SHIELD"}, {n:"Ace Exterior", p:18, b:"BUDGET"}],
+        'Waterproofing': [{n:"Damp Proof", p:85, b:"TERRACE"}, {n:"Damp Sheath", p:45, b:"INTERIOR"}],
+        'Polish': [{n:"PU Wood Polish", p:450, b:"ELITE"}, {n:"Apcolite Enamel", p:38, b:"METAL/WOOD"}]
+    };
+
+    function render(cat, el) {
+        document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
+        if(el) el.classList.add('active');
+        let html = "";
+        paints[cat].forEach(p => {
+            html += `<div class="p-card"><div><span style="font-size:9px; background:#f0ebf9; color:var(--p); padding:2px 6px; border-radius:4px; font-weight:800;">${p.b}</span><h4>${p.n}</h4><b class="price">₹${p.p}/sqft</b></div><button onclick="confirmOrder('${p.n}')" style="background:white; border:1.5px solid var(--p); color:var(--p); padding:6px 15px; border-radius:8px; font-weight:800;">Add</button></div>`;
+        });
+        document.getElementById('product-list').innerHTML = html;
     }
 
-    function bookOrder() {
-        let price = document.getElementById('total-val').innerText;
-        alert("Booking Successful for " + price + "! Expert kal 10 AM aayega.");
-        document.getElementById('track-msg').innerHTML = "<b>Order #UPP-786 Active</b><br>Status: Expert arriving tomorrow 10 AM.";
+    function confirmOrder(name) {
+        alert("Booking Successful for " + name + "! Expert kal 10 AM aayega.");
+        document.getElementById('track-msg').innerHTML = "<b>Order Active: " + name + "</b><br>Status: Expert arriving tomorrow 10 AM.";
         document.getElementById('status-box').style.borderColor = "#673ab7";
         nav('orders', document.querySelectorAll('.nav-item')[1]);
     }
 
-    function aiRobot() {
-        alert("UrbanPaint AI: Namaste! Main aapki kya madad kar sakta hoon?\n\n1. Pricing check\n2. Order status\n3. Expert visit");
-    }
-
+    function aiRobot() { alert("UrbanPaint AI: Namaste! Main aapki kya madad kar sakta hoon?"); }
+    function openAuth() { document.getElementById('auth-modal').style.display = 'flex'; }
+    function closeAuth() { document.getElementById('auth-modal').style.display = 'none'; }
     function nav(id, el) {
         document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
         document.querySelectorAll('.nav-item').forEach(n => n.classList.remove('active'));
@@ -94,7 +135,7 @@
         el.classList.add('active');
     }
 
-    window.onload = updateCalc;
+    window.onload = () => render('Interior');
 </script>
 </body>
 </html>
