--- a/index.html
+++ b/index.html
@@ -14,20 +14,23 @@
         .logo { font-weight: 900; font-size: 1.2rem; }
         #auth-status { font-size: 10px; font-weight: 800; color: var(--p); border: 1.5px solid var(--p); padding: 4px 10px; border-radius: 8px; cursor: pointer; }
 
+        /* Sections */
         .section { display: none; padding: 20px; }
         .section.active { display: block; }
 
         /* Auth Modal */
         #auth-modal { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); z-index: 9999; display: none; align-items: center; justify-content: center; backdrop-filter: blur(4px); }
         .auth-card { background: white; width: 85%; padding: 30px; border-radius: 24px; text-align: center; }
-        .auth-card input { width: 100%; padding: 12px; margin: 10px 0; border-radius: 12px; border: 1px solid #ddd; outline: none; box-sizing: border-box; }
+        .auth-card input { width: 100%; padding: 12px; margin: 10px 0; border-radius: 12px; border: 1px solid #ddd; outline: none; }
 
         /* Products UI */
         .tabs { display: flex; overflow-x: auto; gap: 10px; padding-bottom: 15px; scrollbar-width: none; }
         .tab { padding: 8px 16px; border-radius: 50px; background: var(--grey); font-size: 0.8rem; font-weight: 700; white-space: nowrap; cursor: pointer; border: 1px solid #eee; }
         .tab.active { background: var(--p); color: white; }
         .p-card { border: 1px solid #eee; border-radius: 16px; padding: 15px; margin-bottom: 12px; display: flex; justify-content: space-between; align-items: center; }
+        .price { color: var(--p); font-weight: 800; }
 
+        /* Nav */
         .bottom-nav { position: fixed; bottom: 0; width: 100%; background: white; display: flex; border-top: 1px solid #eee; padding: 12px 0; z-index: 2000; }
         .nav-item { flex: 1; text-align: center; font-size: 10px; color: #757575; font-weight: 600; cursor: pointer; }
         .nav-item.active { color: var(--p); }
@@ -47,7 +50,7 @@
         <input type="email" id="email" placeholder="Email Address">
         <input type="password" id="pass" placeholder="Password">
         <button onclick="handleAuth()" style="width:100%; padding:14px; background:var(--p); color:white; border:none; border-radius:12px; font-weight:bold;">Continue</button>
-        <p style="font-size: 0.7rem; color: #888; margin-top: 15px; cursor: pointer;" onclick="closeAuth()">Cancel</p>
+        <p style="font-size: 0.7rem; color: #888; margin-top: 15px;" onclick="closeAuth()">Cancel</p>
     </div>
 </div>
 
@@ -80,6 +83,9 @@
         <div style="padding:15px; border-bottom:1px solid #eee; display:flex; justify-content:space-between;" onclick="aiRobot()">
             <span>Help Center (AI Robot)</span><i class="fa fa-robot" style="color:var(--p)"></i>
         </div>
+        <div style="padding:15px; display:flex; justify-content:space-between;" onclick="window.open('mailto:urbanpaintpro.inbox@gmail.com')">
+            <span>Email Support</span><i class="fa fa-envelope" style="color:#ea4335"></i>
+        </div>
     </div>
 </div>
 
@@ -90,9 +96,9 @@
 </div>
 
 <script>
-    // Firebase Config (Replace if needed)
-    const firebaseConfig = { apiKey: "AIzaSy...", authDomain: "...", projectId: "..." };
-    if (!firebase.apps.length) { firebase.initializeApp(firebaseConfig); }
+    // Firebase Config Replace karein
+    const firebaseConfig = { apiKey: "AIzaSy...", ... };
+    firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
 
     const paints = {
@@ -107,14 +113,15 @@
         if(el) el.classList.add('active');
         let html = "";
         paints[cat].forEach(p => {
-            html += `<div class="p-card"><div><span style="font-size:9px; background:#f0ebf9; color:var(--p); padding:2px 6px; border-radius:4px; font-weight:800;">${p.b}</span><h4>${p.n}</h4><b style="color:var(--p)">₹${p.p}/sqft</b></div><button onclick="confirmOrder('${p.n}')" style="background:white; border:1.5px solid var(--p); color:var(--p); padding:6px 15px; border-radius:8px; font-weight:800;">Add</button></div>`;
+            html += `<div class="p-card"><div><span style="font-size:9px; background:#f0ebf9; color:var(--p); padding:2px 6px; border-radius:4px; font-weight:800;">${p.b}</span><h4>${p.n}</h4><b class="price">₹${p.p}/sqft</b></div><button onclick="confirmOrder('${p.n}')" style="background:white; border:1.5px solid var(--p); color:var(--p); padding:6px 15px; border-radius:8px; font-weight:800;">Add</button></div>`;
         });
         document.getElementById('product-list').innerHTML = html;
     }
 
     function confirmOrder(name) {
-        alert("Booking Successful for " + name + "!");
-        document.getElementById('track-msg').innerHTML = "<b>Order Active: " + name + "</b><br>Status: Processing...";
+        alert("Booking Successful for " + name + "! Expert kal 10 AM aayega.");
+        document.getElementById('track-msg').innerHTML = "<b>Order Active: " + name + "</b><br>Status: Expert arriving tomorrow 10 AM.";
+        document.getElementById('status-box').style.borderColor = "#673ab7";
         nav('orders', document.querySelectorAll('.nav-item')[1]);
     }
 
@@ -125,10 +132,10 @@
         document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
         document.querySelectorAll('.nav-item').forEach(n => n.classList.remove('active'));
         document.getElementById(id).classList.add('active');
-        if(el) el.classList.add('active');
+        el.classList.add('active');
     }
 
-    window.onload = () => { render('Interior'); };
+    window.onload = () => render('Interior');
 </script>
 </body>
 </html>
