--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>UrbanPaintPro | Official AI App</title>
+    <title>UrbanPaintPro | Ultra Showroom</title>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -18,57 +18,49 @@
         .section.active { display: block; }
         @keyframes slideUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
 
-        /* Robot Chat */
-        #robot-modal { position: fixed; bottom: -100%; left: 0; width: 100%; height: 75%; background: white; z-index: 10000; border-radius: 30px 30px 0 0; box-shadow: 0 -10px 40px rgba(0,0,0,0.1); transition: 0.4s ease; display: flex; flex-direction: column; }
+        /* Fast AI Robot */
+        #robot-modal { position: fixed; bottom: -100%; left: 0; width: 100%; height: 75%; background: white; z-index: 10000; border-radius: 30px 30px 0 0; box-shadow: 0 -10px 40px rgba(0,0,0,0.1); transition: 0.3s ease-out; display: flex; flex-direction: column; }
         #robot-modal.show { bottom: 0; }
-        .chat-body { flex: 1; padding: 20px; overflow-y: auto; background: #fdfdfd; display: flex; flex-direction: column; gap: 10px; }
+        .chat-body { flex: 1; padding: 20px; overflow-y: auto; display: flex; flex-direction: column; gap: 10px; }
         .bot-msg { background: #eee; padding: 12px; border-radius: 15px 15px 15px 0; max-width: 80%; align-self: flex-start; font-size: 0.9rem; }
         .user-msg { background: var(--p); color: white; padding: 12px; border-radius: 15px 15px 0 15px; max-width: 80%; align-self: flex-end; font-size: 0.9rem; }
-
-        /* Auth UI */
-        #auth-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 11000; display: none; align-items: center; justify-content: center; backdrop-filter: blur(8px); }
-        .auth-card { background: white; width: 85%; padding: 30px; border-radius: 30px; text-align: center; }
-        .auth-card input { width: 100%; padding: 15px; margin: 10px 0; border-radius: 12px; border: 1.5px solid #eee; box-sizing: border-box; outline: none; }
 
         /* Folders & Cards */
         .folder { background: white; border-radius: 20px; padding: 22px; margin-bottom: 12px; display: flex; justify-content: space-between; align-items: center; cursor: pointer; border: 1px solid #eee; font-weight: 800; box-shadow: 0 4px 12px rgba(0,0,0,0.03); }
         .folder-list { display: none; margin-bottom: 20px; }
-        .p-card { background: white; border-radius: 24px; padding: 20px; margin-bottom: 15px; border: 1px solid #eee; }
+        .p-card { background: white; border-radius: 24px; padding: 20px; margin-bottom: 15px; border: 1px solid #eee; box-shadow: 0 4px 12px rgba(0,0,0,0.02); }
         .tag { padding: 4px 10px; border-radius: 8px; font-size: 0.6rem; font-weight: 800; text-transform: uppercase; }
         .tag-ultra { background: #fff8e1; color: #b8860b; border: 1px solid #d4af37; }
         .tag-premium { background: #f0ebf9; color: var(--p); }
 
         .book-btn { background: #000; color: white; border: none; padding: 10px 22px; border-radius: 12px; font-weight: 800; cursor: pointer; }
-
-        /* Bottom Nav */
-        .bottom-nav { position: fixed; bottom: 0; width: 100%; background: #fff; display: flex; padding: 12px 0; border-top: 1px solid #eee; z-index: 5000; }
         .nav-item { flex: 1; text-align: center; color: #8e8e93; font-size: 11px; font-weight: 700; cursor: pointer; }
         .nav-item.active { color: #000; }
-        .nav-item i { font-size: 1.4rem; display: block; margin-bottom: 4px; }
+
+        /* Admin Dashboard Overlay */
+        #admin-panel { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: white; z-index: 20000; display: none; padding: 20px; box-sizing: border-box; overflow-y: auto; }
     </style>
 </head>
 <body>
 
-<div id="auth-overlay">
-    <div class="auth-card">
-        <h2 style="font-style: italic; margin-top:0;">UrbanPaintPro Login</h2>
-        <input type="email" id="auth-email" placeholder="Email Address">
-        <input type="password" id="auth-pass" placeholder="Password (Min 6 characters)">
-        <button onclick="handleAuth()" style="background:var(--p); color:white; padding:16px; border-radius:15px; border:none; width:100%; font-weight:800;">Continue</button>
-        <p onclick="toggleAuth(false)" style="color:red; font-size:0.8rem; margin-top:15px; cursor:pointer;">Close</p>
+<div id="admin-panel">
+    <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
+        <h2>Admin Console</h2>
+        <button onclick="closeAdmin()" style="background:red; color:white; border:none; padding:8px 15px; border-radius:10px;">Exit</button>
     </div>
+    <div id="admin-content"></div>
 </div>
 
 <div id="robot-modal">
     <div style="background:var(--p); color:white; padding:20px; border-radius:30px 30px 0 0; display:flex; justify-content:space-between; align-items:center;">
-        <span><i class="fa fa-robot"></i> UPP AI Assistant</span>
+        <span><i class="fa fa-bolt"></i> Fast AI Assistant</span>
         <i class="fa fa-times" onclick="toggleRobot(false)"></i>
     </div>
     <div class="chat-body" id="chat-content">
-        <div class="bot-msg">Namaste! Main UrbanPaintPro AI hoon. Main aapki help kaise kar sakta hoon?</div>
+        <div class="bot-msg">Arbaj, main super fast mode mein hoon! Kya help karun?</div>
     </div>
     <div style="padding: 15px; display: flex; gap: 10px; background:#fff; border-top:1px solid #eee;">
-        <input type="text" id="bot-input" placeholder="Price ya rates puchein..." style="flex:1; border:none; background:#f0f0f0; padding:12px; border-radius:15px; outline:none;">
+        <input type="text" id="bot-input" placeholder="Price ya Rates puchein..." style="flex:1; border:none; background:#f0f0f0; padding:12px; border-radius:15px; outline:none;">
         <button onclick="askAI()" style="background:var(--p); color:white; border:none; border-radius:50%; width:45px; height:45px;"><i class="fa fa-paper-plane"></i></button>
     </div>
 </div>
@@ -79,7 +71,7 @@
 </div>
 
 <div id="home" class="section active">
-    <h3 style="font-weight: 900; margin-bottom: 25px;">Expert Services</h3>
+    <h3 style="font-weight: 900; margin-bottom: 25px;">Expert Catalog</h3>
     <div class="folder" onclick="toggleFolder('int')">Interior Painting <i class="fa fa-home"></i></div>
     <div id="int" class="folder-list"></div>
     <div class="folder" onclick="toggleFolder('ext')">Exterior Painting <i class="fa fa-shield-alt"></i></div>
@@ -90,33 +82,24 @@
 
 <div id="orders" class="section">
     <h3 style="font-weight: 900;">My Projects</h3>
-    <div id="history-box"><p style="text-align:center; color:#888; margin-top:50px;">No bookings found.</p></div>
+    <div id="history-box"></div>
 </div>
 
 <div id="account" class="section">
-    <div style="font-size: 1.5rem; font-weight: 800; font-style: italic; margin-bottom: 25px;">Account</div>
-    <div id="profile-container">
-        <button onclick="toggleAuth(true)" style="background:var(--p); color:white; padding:16px; border-radius:15px; border:none; width:100%; font-weight:800;">Login or Create Account</button>
-    </div>
+    <div id="admin-trigger" style="font-size: 1.5rem; font-weight: 800; font-style: italic; margin-bottom: 25px;" onclick="adminClick()">Profile</div>
+    <div id="profile-container"></div>
     <div style="height:8px; background:#f4f4f4; margin:25px -20px;"></div>
-    <div style="padding:20px 0; border-bottom:1px solid #eee; display:flex; justify-content:space-between; align-items:center;" onclick="window.open('https://wa.me/919711904092')">
-        <div style="display:flex; align-items:center; gap:15px;"><i class="fab fa-whatsapp" style="color:#25d366; font-size:1.5rem;"></i><span>WhatsApp: 9711904092</span></div>
-        <i class="fa fa-chevron-right" style="color:#ccc;"></i>
-    </div>
-    <div style="padding:20px 0; border-bottom:1px solid #eee; display:flex; justify-content:space-between; align-items:center;" onclick="window.open('mailto:urbanpaintpro.inbox@gmail.com')">
-        <div style="display:flex; align-items:center; gap:15px;"><i class="fa fa-envelope" style="color:#ea4335; font-size:1.4rem;"></i><span>urbanpaintpro.inbox@gmail.com</span></div>
-        <i class="fa fa-chevron-right" style="color:#ccc;"></i>
-    </div>
+    <div style="padding:20px 0;" onclick="window.open('https://wa.me/919711904092')"><i class="fab fa-whatsapp" style="color:#25d366;"></i> WhatsApp: 9711904092</div>
+    <div style="padding:20px 0;" onclick="window.open('mailto:urbanpaintpro.inbox@gmail.com')"><i class="fa fa-envelope" style="color:#ea4335;"></i> urbanpaintpro.inbox@gmail.com</div>
 </div>
 
-<div class="bottom-nav">
+<div class="bottom-nav" style="position: fixed; bottom: 0; width: 100%; background: #fff; display: flex; padding: 12px 0; border-top: 1px solid #eee;">
     <div class="nav-item active" onclick="nav('home', this)"><i class="fa fa-compass"></i>Explore</div>
     <div class="nav-item" onclick="nav('orders', this)"><i class="fa fa-stream"></i>Orders</div>
     <div class="nav-item" onclick="nav('account', this)"><i class="fa fa-user-circle"></i>Account</div>
 </div>
 
 <script>
-    // ARBAJ KI REAL FIREBASE CONFIG
     const firebaseConfig = {
       apiKey: "AIzaSyA2DT2ITLS2LgZF3yEkDA_K9kbPIsfpDig",
       authDomain: "professionalpainters-28488.firebaseapp.com",
@@ -125,59 +108,44 @@
       messagingSenderId: "233510965012",
       appId: "1:233510965012:web:ccc02da0f3e86a3b4a7c01"
     };
-    
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
+    let clickCount = 0;
 
     const catalog = {
         "int": [
-            {n:"Royale Aspira", p:68, d:"Ultra Luxury: 10yr Warranty.", t:"ultra"},
-            {n:"Royale Matt", p:54, d:"Luxury Velvet Finish.", t:"ultra"},
-            {n:"Tractor Emulsion", p:16, d:"Budget Friendly.", t:"economy"}
+            {n:"Royale Aspira", p:68, d:"Ultra Luxury: Teflon Coating, 10yr Warranty.", t:"ultra"},
+            {n:"Royale Matt", p:54, d:"Luxury: Velvet Finish, Washable.", t:"ultra"},
+            {n:"Royale Luxury Shyne", p:48, d:"Premium: High Gloss & Stain Resistant.", t:"premium"},
+            {n:"Apcolite Premium", p:32, d:"Standard: Rich Matt Look, 2x Durability.", t:"premium"},
+            {n:"Tractor Emulsion Shyne", p:22, d:"Economy+: High Gloss at Budget Price.", t:"economy"},
+            {n:"Tractor Emulsion Sparc", p:16, d:"Basic: Smooth finish for rental homes.", t:"economy"}
         ],
         "ext": [
-            {n:"Apex Protek Duralife", p:95, d:"15yr Warranty, Self-cleaning.", t:"ultra"},
-            {n:"Ace Exterior", p:22, d:"Budget Protection.", t:"economy"}
+            {n:"Apex Protek Duralife", p:95, d:"Ultra Luxury: 15yr Warranty, Self-cleaning.", t:"ultra"},
+            {n:"Apex Ultima Protek", p:78, d:"Luxury: 10yr Warranty, Monsoon Defense.", t:"ultra"},
+            {n:"Apex Shyne", p:38, d:"Premium: High Weather Resistance with subtle shine.", t:"premium"},
+            {n:"Ace Exterior", p:22, d:"Basic: Reliable weather protection on a budget.", t:"economy"}
         ],
         "wp": [
-            {n:"Damp Proof Duralife", p:115, d:"Extreme Waterproofing.", t:"ultra"}
+            {n:"Damp Proof Duralife", p:115, d:"Ultra Luxury: Heavy Duty Waterproofing + Heat Shield.", t:"ultra"},
+            {n:"SmartCare Damp Proof", p:85, d:"Standard: Durable protection.", t:"premium"}
         ]
     };
 
-    auth.onAuthStateChanged(user => {
-        const box = document.getElementById('profile-container');
-        if (user) {
-            box.innerHTML = `<h4>Namaste, ${user.email.split('@')[0]}</h4><p style="color:#666;">${user.email}</p><button onclick="auth.signOut()" style="color:red; background:none; border:none; font-weight:bold; padding:0; cursor:pointer;">Sign Out</button>`;
-        } else {
-            box.innerHTML = `<button onclick="toggleAuth(true)" style="background:var(--p); color:white; padding:16px; border-radius:15px; border:none; width:100%; font-weight:800;">Login or Create Account</button>`;
-        }
-    });
-
-    function handleAuth() {
-        const email = document.getElementById('auth-email').value;
-        const pass = document.getElementById('auth-pass').value;
-        if(!email || pass.length < 6) { alert("Sahi email aur 6-digit password daalein."); return; }
-        auth.signInWithEmailAndPassword(email, pass).then(() => toggleAuth(false))
-        .catch(() => auth.createUserWithEmailAndPassword(email, pass).then(() => toggleAuth(false)).catch(err => alert(err.message)));
-    }
-
     function askAI() {
-        const input = document.getElementById('bot-input');
-        const box = document.getElementById('chat-content');
-        if(!input.value) return;
-        box.innerHTML += `<div class="user-msg">${input.value}</div>`;
-        let q = input.value.toLowerCase(), reply = "Expert 9711904092 se aapko call karenge.";
-        if(q.includes("price")) reply = "Basic rates ₹16 se shuru hain aur Ultra-Luxury Royale Aspira ₹68 hai.";
-        setTimeout(() => {
-            box.innerHTML += `<div class="bot-msg">${reply}</div>`;
-            box.scrollTop = box.scrollHeight;
-        }, 600);
-        input.value = "";
+        const i = document.getElementById('bot-input'), b = document.getElementById('chat-content');
+        if(!i.value) return;
+        b.innerHTML += `<div class="user-msg">${i.value}</div>`;
+        let q = i.value.toLowerCase(), r = "Expert 9711904092 se aapko jald call karenge.";
+        if(q.includes("price")) r = "Interior ₹16-₹68, Exterior ₹22-₹95 aur Waterproofing ₹85-₹115 per sqft hai.";
+        setTimeout(() => { b.innerHTML += `<div class="bot-msg">${r}</div>`; b.scrollTop = b.scrollHeight; }, 100);
+        i.value = "";
     }
 
     function render() {
-        for(let key in catalog) {
-            document.getElementById(key).innerHTML = catalog[key].map(p => `
+        for(let k in catalog) {
+            document.getElementById(k).innerHTML = catalog[k].map(p => `
                 <div class="p-card">
                     <div style="display:flex; justify-content:space-between;"><h4>${p.n}</h4><span class="tag tag-${p.t}">${p.t}</span></div>
                     <p style="font-size:0.8rem; color:#666; margin:8px 0;">${p.d}</p>
@@ -185,35 +153,34 @@
                         <span style="font-weight:900; font-size:1.1rem;">₹${p.p}/sqft</span>
                         <button class="book-btn" onclick="book('${p.n}')">Book</button>
                     </div>
-                </div>
-            `).join('');
+                </div>`).join('');
         }
     }
 
-    function book(name) {
-        if(!auth.currentUser) { toggleAuth(true); return; }
+    function book(n) {
         window.location.href = `upi://pay?pa=kingkhan33648@okicici&pn=UrbanPaintPro&am=1&cu=INR`;
         let h = JSON.parse(localStorage.getItem('upp_h') || "[]");
-        h.push({n: name, id: Math.floor(Math.random()*9000), date: new Date().toLocaleDateString()});
+        h.push({n, date: new Date().toLocaleDateString(), user: auth.currentUser ? auth.currentUser.email : 'Guest'});
         localStorage.setItem('upp_h', JSON.stringify(h));
     }
 
-    function toggleAuth(s) { document.getElementById('auth-overlay').style.display = s ? 'flex' : 'none'; }
-    function toggleRobot(s) { document.getElementById('robot-modal').classList.toggle('show', s); }
-    function toggleFolder(id) { 
-        const el = document.getElementById(id);
-        const isOpen = el.style.display === 'block';
-        document.querySelectorAll('.folder-list').forEach(f => f.style.display = 'none');
-        el.style.display = isOpen ? 'none' : 'block';
+    function adminClick() { clickCount++; if(clickCount >= 10) { document.getElementById('admin-panel').style.display = 'block'; loadAdmin(); clickCount=0; } }
+    function closeAdmin() { document.getElementById('admin-panel').style.display = 'none'; }
+    function loadAdmin() {
+        const h = JSON.parse(localStorage.getItem('upp_h') || "[]");
+        document.getElementById('admin-content').innerHTML = h.map(o => `<div class="p-card"><b>${o.user}</b> booked ${o.n}</div>`).join('');
     }
+
+    function toggleFolder(id) { const el = document.getElementById(id); el.style.display = (el.style.display === 'block') ? 'none' : 'block'; }
+    function toggleRobot(s) { document.getElementById('robot-modal').classList.toggle('show', s); }
     function nav(id, el) {
         document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
         document.querySelectorAll('.nav-item').forEach(n => n.classList.remove('active'));
         document.getElementById(id).classList.add('active');
         if(el) el.classList.add('active');
         if(id === 'orders') {
-            const hist = JSON.parse(localStorage.getItem('upp_h') || "[]");
-            document.getElementById('history-box').innerHTML = hist.length ? hist.reverse().map(o => `<div class="p-card" style="border-left:6px solid var(--p);"><h4>${o.n}</h4><small>#ORD-${o.id} | Paid</small></div>`).join('') : '<p style="text-align:center; color:#888; margin-top:50px;">No bookings found.</p>';
+            const h = JSON.parse(localStorage.getItem('upp_h') || "[]");
+            document.getElementById('history-box').innerHTML = h.map(o => `<div class="p-card"><b>${o.n}</b><br><small>Status: Confirmed</small></div>`).join('');
         }
     }
     window.onload = render;
